# celsius

./: .gitignore  README.md  pyproject.toml
src/celsius/: celsius.py  celsius_server.py
